--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.text-justify {
+    text-align: justify;
+}
+
 /* Change badge color when the button is hovered */
 #ongoingBtn:hover .badge {
     background-color: #FFFFFF; /* Bootstrap primary blue */
