--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,25 +2,46 @@
     text-align: justify;
 }
 
+/* Change hover color for Pending Approval button */
+#display_pending:hover {
+    background-color: #ffc107; /* Bootstrap Yellow */
+    color: #fff; 
+    border-color: #0275d8; 
+}
+
+/* Change hover color for Approved Reports button */
+#display_approved:hover {
+    background-color: #28a745; /* Bootstrap Green */
+    color: #fff; 
+    border-color: #0275d8; 
+}
+
+/* Change hover color for Rejected Reports button */
+#display_rejected:hover {
+    background-color: #dc3545; /* Bootstrap Red */
+    color: #fff;
+    border-color: #0275d8; 
+}
+
 /* Change badge color when the button is hovered */
 #ongoingBtn:hover .badge {
-    background-color: #FFFFFF; /* Bootstrap primary blue */
-    color: #0275d8; /* White text */
+    background-color: #FFFFFF; 
+    color: #0275d8; 
 }
 
 #finishedBtn:hover .badge {
-    background-color: #FFFFFF; /* Bootstrap primary blue */
-    color: #0275d8; /* White text */
+    background-color: #FFFFFF; 
+    color: #0275d8; 
 }
 
 #display_pending:hover .badge{
     background-color: #FFFFFF;
-    color: #0275d8;
+    color: #ffc107;
 }
 
 #display_approved:hover .badge{
     background-color: #FFFFFF;
-    color: #198754;
+    color: #28a745;
 }
 
 #display_rejected:hover .badge{
