--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 /* Change badge color when the button is hovered */
 #ongoingBtn:hover .badge {
     background-color: #FFFFFF; /* Bootstrap primary blue */
-    color: #0275d8; /* White text */
+    color: #ffc107; /* White text */
 }
 
 #finishedBtn:hover .badge {
     background-color: #FFFFFF; /* Bootstrap primary blue */
-    color: #0275d8; /* White text */
+    color: #198754; /* White text */
 }
 
 #display_pending:hover .badge{
